--- a/res/layout/activity_splash.xml
+++ b/res/layout/activity_splash.xml
@@ -6,7 +6,8 @@
     <ImageView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:src="@drawable/splash" >
+        android:src="@drawable/splash"
+        android:scaleType="centerCrop" >
     </ImageView>
 
     <ProgressBar
@@ -15,7 +16,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true" 
         android:layout_centerHorizontal="true"
-        style="?android:attr/progressBarStyleSmall">
+        style="?android:attr/progressBarStyleSmall"
+        android:layout_marginBottom="5dp">
     </ProgressBar>
 
 </RelativeLayout>
