--- a/res/layout/widget_rss_item.xml
+++ b/res/layout/widget_rss_item.xml
@@ -1,12 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/root"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:layout_height="wrap_content"
+    android:background="@drawable/item_selector"
+    android:padding="4dp" >
 
+    <ImageView
+        android:id="@+id/img"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="5dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/logo_list" />
+
+    <com.analysedesgeeks.android.view.EllipsizingTextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toLeftOf="@+id/forward_arrow"
+        android:layout_toRightOf="@+id/img"
+        android:maxLines="3"
+        android:singleLine="false"
+        android:textColor="@color/black"
+        android:textStyle="bold" />
+    
     <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:text="TODO"/>
+        android:id="@+id/date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/title"
+        android:layout_toLeftOf="@+id/forward_arrow"
+        android:layout_toRightOf="@+id/img"
+        android:maxLines="1"
+        android:singleLine="false"
+        android:textColor="@color/gradient_light_blue" />
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/forward_arrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/img"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/img"
+        android:layout_alignWithParentIfMissing="true"
+        android:src="@drawable/fleche_droite" />
+
+</RelativeLayout>
