--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -3,5 +3,7 @@
     <color name="black">#000000</color> 
     <color name="white">#ffffff</color>
     <color name="red">#ff0000</color>
-    <color name="blue">#0000ff</color>   
+    <color name="blue">#0000ff</color>
+    <color name="gradient_light_blue">#195695</color>
+    <color name="gradient_dark_blue">#4174a8</color>   
 </resources>
