--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -16,9 +16,18 @@
             android:textColor="@color/white" />
     </RelativeLayout>
 
-    <ListView
-        android:id="@+id/list"
+    <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="fill_parent"
+        android:orientation="vertical" >
+
+        <ListView
+            android:id="@+id/list"
+            android:layout_width="fill_parent"
+            android:layout_height="0dip"
+            android:layout_weight="1" />
+
+        <include layout="@layout/widget_player" />
+    </LinearLayout>
 
 </ViewSwitcher>
