--- a/res/layout/activity_podcast.xml
+++ b/res/layout/activity_podcast.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/content"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/white"
-    android:id="@+id/content" >
+    android:background="@color/white" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -11,13 +11,26 @@
         android:orientation="vertical"
         android:padding="5dp" >
 
-
-        <TextView
-            android:layout_marginTop="10dp"
-            android:id="@+id/date"
-            android:layout_width="fill_parent"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/gradient_light_blue"/>
+            android:orientation="horizontal"
+            android:padding="5dp" >
+
+            <TextView
+                android:id="@+id/date"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/gradient_light_blue" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/play"
+                android:src="@drawable/btn_playback_ic_play_small" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/description"
@@ -25,9 +38,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:textColor="@color/black" />
-
-        
-
     </LinearLayout>
 
 </ScrollView>
