--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="blue">#0000ff</color>
     <color name="gradient_light_blue">#195695</color>
     <color name="gradient_dark_blue">#4174a8</color>   
+     <color name="transparentBackground">#55000000</color>
 </resources>
