--- a/res/layout/widget_player.xml
+++ b/res/layout/widget_player.xml
@@ -1,74 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/podcast_player"
+    android:layout_width="match_parent"
+    android:layout_height="140dp"
+    android:orientation="vertical" >
 
-    <View 
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:background="#ffffffff" />
+        android:layout_height="fill_parent"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/loading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:paddingLeft="5dip"
+            android:shadowColor="#ff000000"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="3"
+            android:text="@string/loading"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textSize="14sp"
+            android:textStyle="bold" />
+
+        <ProgressBar
+            style="?android:attr/progressBarStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="2dp"
+            android:layout_toLeftOf="@id/loading"
+            android:layout_alignTop="@id/loading"
+            android:layout_alignBottom="@id/loading" >
+        </ProgressBar>
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#ff5a5a5a"
-        android:paddingTop="1dip"
-        android:paddingBottom="4dip"
-        android:orientation="horizontal">
+        android:layout_height="fill_parent"
+        android:orientation="vertical" >
 
-        <TextView android:id="@+id/currenttime"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="14sp"
-            android:textStyle="bold"
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="#ffffffff" />
+
+        <TextView
+            android:id="@+id/playing"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="#ff5a5a5a"
+            android:gravity="center"
+            android:padding="5dp"
             android:shadowColor="#ff000000"
             android:shadowDx="0"
             android:shadowDy="0"
             android:shadowRadius="3"
-            android:layout_gravity="bottom"
-            android:layout_weight="1"
-            android:layout_width="0dip"
-            android:paddingLeft="5dip"
-            android:layout_height="wrap_content" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textSize="14sp"
+            android:textStyle="bold" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#ff5a5a5a"
             android:orientation="horizontal"
-            android:layout_gravity="bottom"
-            android:layout_marginTop="1dip"
-            android:layout_marginBottom="2dip"
-            android:gravity="center">
+            android:paddingBottom="4dip"
+            android:paddingTop="1dip" >
 
-            <ImageButton android:id="@+id/prev" style="@android:style/MediaButton.Previous" />
+            <TextView
+                android:id="@+id/currenttime"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_weight="1"
+                android:paddingLeft="5dip"
+                android:shadowColor="#ff000000"
+                android:shadowDx="0"
+                android:shadowDy="0"
+                android:shadowRadius="3"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="14sp"
+                android:textStyle="bold" />
 
-            <ImageButton android:id="@+id/pause" style="@android:style/MediaButton.Play" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_marginBottom="2dip"
+                android:layout_marginTop="1dip"
+                android:gravity="center"
+                android:orientation="horizontal" >
 
-            <ImageButton android:id="@+id/next" style="@android:style/MediaButton.Next" />
+                <ImageButton
+                    android:id="@+id/pause"
+                    style="@android:style/MediaButton.Play"
+                    android:contentDescription="@string/play" />
+            </LinearLayout>
 
+            <TextView
+                android:id="@+id/totaltime"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:paddingRight="5dip"
+                android:shadowColor="#ff000000"
+                android:shadowDx="0"
+                android:shadowDy="0"
+                android:shadowRadius="3"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="14sp"
+                android:textStyle="bold" />
         </LinearLayout>
 
-        <TextView android:id="@+id/totaltime"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            android:shadowColor="#ff000000"
-            android:shadowDx="0"
-            android:shadowDy="0"
-            android:shadowRadius="3"
-            android:gravity="right"
-            android:paddingRight="5dip"
-            android:layout_gravity="bottom"
-            android:layout_weight="1"
-            android:layout_width="0dip"
-            android:layout_height="wrap_content" />
-
+        <SeekBar
+            android:id="@android:id/progress"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="36dip"
+            android:background="#ff5a5a5a"
+            android:paddingBottom="4dip"
+            android:paddingLeft="18dip"
+            android:paddingRight="18dip" />
     </LinearLayout>
 
-    <SeekBar android:id="@android:id/progress"
-        android:background="#ff5a5a5a"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="match_parent"
-        android:layout_height="36dip"
-        android:paddingLeft="8dip"
-        android:paddingRight="8dip"
-        android:paddingBottom="4dip" />
-
-</merge>
+</ViewSwitcher>
