--- a/res/layout/fragment_webview.xml
+++ b/res/layout/fragment_webview.xml
@@ -7,7 +7,8 @@
     <WebView
         android:id="@+id/webview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+         />
 
     <TextView
         android:id="@+id/loading"
