--- a/res/layout/activity_about.xml
+++ b/res/layout/activity_about.xml
@@ -1,57 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical"
     android:background="@color/white" >
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/commanditaires"
-        android:gravity="center"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:textSize="14sp"
-        android:layout_marginTop="25dp" />
+        android:orientation="vertical" >
 
-    <ImageView
-        android:id="@+id/moogAudioIV"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/moog_audio"
-        android:contentDescription="@string/moog_audio"
-        android:layout_marginTop="15dp" />
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:gravity="center"
+            android:text="@string/commanditaires"
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/and"
-        android:textColor="@color/black"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textSize="14sp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp" />
+        <ImageView
+            android:id="@+id/moogAudioIV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:contentDescription="@string/moog_audio"
+            android:src="@drawable/moog_audio" />
 
-    <ImageView
-        android:id="@+id/cipcIV"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/cipc"
-        android:contentDescription="@string/cipc"
-        android:layout_marginBottom="25dp" />
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:text="@string/and"
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/aboutTV"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textSize="14sp"
-        android:layout_margin="25dp"  />
+        <ImageView
+            android:id="@+id/cipcIV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="25dp"
+            android:contentDescription="@string/cipc"
+            android:src="@drawable/cipc" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/aboutTV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="25dp"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+</ScrollView>
