correction de la notification bar

--- a/res/layout/widget_player.xml
+++ b/res/layout/widget_player.xml
@@ -8,7 +8,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:background="#ff5a5a5a" >
 
         <TextView
             android:id="@+id/loading"
