--- a/res/layout/activity_podcast.xml
+++ b/res/layout/activity_podcast.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <ScrollView        
+    <ScrollView
         android:id="@+id/content"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
@@ -24,18 +23,34 @@
                 android:orientation="horizontal"
                 android:padding="5dp" >
 
-                <TextView
-                    android:id="@+id/date"
+                <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
                     android:layout_weight="1"
-                    android:textColor="@color/gradient_light_blue" />
+                    android:orientation="vertical"
+                    android:padding="5dp" >
+
+                    <TextView
+                        android:id="@+id/title"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:textColor="@color/black"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/date"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:textColor="@color/gradient_light_blue" />
+                </LinearLayout>
 
                 <ImageButton
                     android:id="@+id/play"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:contentDescription="@string/play"
                     android:src="@drawable/btn_playback_ic_play_small" />
             </LinearLayout>
 
