--- a/res/layout/activity_splash.xml
+++ b/res/layout/activity_splash.xml
@@ -7,7 +7,8 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:src="@drawable/splash"
-        android:scaleType="centerCrop" >
+        android:scaleType="centerCrop"
+        android:contentDescription="@string/app_name" >
     </ImageView>
 
     <ProgressBar
