--- a/res/layout/widget_player.xml
+++ b/res/layout/widget_player.xml
@@ -3,13 +3,13 @@
     android:id="@+id/podcast_player"
     android:layout_width="match_parent"
     android:layout_height="140dp"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+        android:background="@color/grey" >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:orientation="vertical"
-        android:background="#ff5a5a5a" >
+        android:orientation="vertical" >
 
         <TextView
             android:id="@+id/loading"
@@ -51,7 +51,7 @@
             android:id="@+id/playing"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:background="#ff5a5a5a"
+            android:background="@color/grey"
             android:gravity="center"
             android:padding="5dp"
             android:shadowColor="#ff000000"
@@ -65,7 +65,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#ff5a5a5a"
+            android:background="@color/grey"
             android:orientation="horizontal"
             android:paddingBottom="4dip"
             android:paddingTop="1dip" >
@@ -116,16 +116,17 @@
                 android:textSize="14sp"
                 android:textStyle="bold" />
         </LinearLayout>
-
+
         <SeekBar
             android:id="@android:id/progress"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
             android:layout_height="36dip"
-            android:background="#ff5a5a5a"
+            android:background="@color/grey"
             android:paddingBottom="4dip"
             android:paddingLeft="18dip"
             android:paddingRight="18dip" />
+
     </LinearLayout>
 
 </ViewSwitcher>
