--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="white">#ffffff</color>
     <color name="red">#ff0000</color>
     <color name="blue">#0000ff</color>
+    <color name="grey">#ff5a5a5a</color>
     <color name="gradient_light_blue">#195695</color>
     <color name="gradient_dark_blue">#4174a8</color>   
      <color name="transparentBackground">#55000000</color>
