added maven build added SourceCodeActivity.java fixed twitter view

--- a/res/layout/statusbar.xml
+++ b/res/layout/statusbar.xml
@@ -22,7 +22,8 @@
         android:padding="4dip"
         android:gravity="center"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/playPause">
     </ImageView>
 
     <LinearLayout
